# DATreeMap

./: .cursorrules  .env  .env.example  .gitignore  CODEOWNERS  Dockerfile  README-frontend.md  README.ko.md  README.md  Tree Dataset_De Anza College.csv  Tree Dataset_De Anza College_Backup.csv  db.sqlite3  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  index.html  initialMap.html  multi-stage.Dockerfile  pyproject.toml  script.js  trees_data.js
.git copy/: FETCH_HEAD  ORIG_HEAD  config  index
.git copy/logs/: HEAD
.github/ISSUE_TEMPLATE/: feature_request.md
Docs/: Django_Start.md  Github Tips.md  How to View Formatted Markdown.md  Treemap_Architecture.md  Treemap_Architecture_Eng.md  Treemap_Recap.md  Treemap_Recap_Eng.md  Why De We Need a Virtual Environment?.md  Why Do We Need a Virtual Environment?.md
Frontend/: Tree Dataset_De Anza College.csv  home.html  login.html  trees_data.js
Frontend/KakaoClone/: chat.html  chats.html  find.html  friends.html  more.html
Frontend/css/: styles.css  variables.css
common/: models.py
config/: production_settings.py  settings.py  urls.py
config/settings/: production.py
css/: styles.css
docs/review/: 01-scope-and-criteria.md  02-codebase-map.md  (+2 more)
frontend/: Dockerfile  tailwind.config.js  vite.config.js
frontend.bak/: README.md  index.html  package.json  start-dev.sh
nginx/: nginx.conf
scripts/: build-prod.sh  start-frontend-dev.sh  start-full-dev.sh
templates/: base.html
trees/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
users/: admin.py  models.py  tests.py
(+30 files in other folders)
