[tool.poetry]
name = "datreemap"
version = "0.1.0"
description = ""
authors = ["Theo Lee <theolee021@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
